--- a/hamburger_native_js/app/css/style.css
+++ b/hamburger_native_js/app/css/style.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+body::-webkit-scrollbar {
+    width: 0;
+}
+
 section {
     display: flex;
     align-items: center;
@@ -23,6 +27,7 @@ section {
     height: 80px;
     border-radius: 50%;
     background-color: #2a2a2a;
+    transition: 0.4s;
 }
 
 .burger-menu__button:hover .burger-menu__lines {
@@ -54,6 +59,7 @@ section {
     top: -12px;
 }
 
+.burger-menu_active .burger-menu__button,
 .burger-menu_active .burger-menu__lines {
     background-color: transparent;
 }
@@ -79,6 +85,7 @@ section {
     background-color: #2a2a2a;
     overflow-y: auto;
     left: -100%;
+    transition: 0.5s;
 }
 
 .burger-menu_active .burger-menu__nav {
